# Drf-Blog

./: .gitignore  README.md  manage.py  project.toml  pyproject.toml  requirements.txt
accounts/api/: permissions.py  serializers.py  urls.py  views.py
blog/: admin.py  models.py
blog/api/: permissions.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20211121_1907.py
blogcore/: asgi.py  settings.py  urls.py  wsgi.py
